--- a/roles/pxe-server/templates/default.j2
+++ b/roles/pxe-server/templates/default.j2
@@ -8,7 +8,7 @@ menu title ########## PXE Boot Menu ##########
 label 1
 menu label ^1) Install CentOS 7
 kernel centos7_x64/images/pxeboot/vmlinuz
-append initrd=centos7_x64/images/pxeboot/initrd.img method=http://{{ host_ip }}/centos7_x64 devfs=nomount
+append initrd=centos7_x64/images/pxeboot/initrd.img method=http://{{ ansible_default_ipv4.address }}/centos7_x64 devfs=nomount
 
 label 2
 menu label ^2) Boot from local drive localboot
